--- a/app/src/main/res/layout/dialog2.xml
+++ b/app/src/main/res/layout/dialog2.xml
@@ -29,7 +29,9 @@
             android:layout_width="match_parent"
             android:layout_height="100dp">
             <EditText
-
+                android:paddingTop="@dimen/_5sdp"
+                android:paddingBottom="@dimen/_5sdp"
+                android:maxLength="5"
                 android:backgroundTint="#E6ECFF"
                 android:cursorVisible="false"
                 android:inputType="numberDecimal"
@@ -37,7 +39,7 @@
                 android:id="@+id/edt_daily_gold"
                 android:textStyle="bold"
                 android:textAlignment="center"
-                android:textSize="@dimen/_55ssp"
+                android:textSize="@dimen/_45ssp"
                 android:textColorHint="#252450"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
@@ -56,14 +58,14 @@
         <Button
             android:textAllCaps="false"
             android:id="@+id/btn_accept_daily"
-            android:layout_marginBottom="15dp"
+            android:layout_marginBottom="@dimen/_15sdp"
             android:textColor="#FFF"
             android:background="@drawable/round_bg_button"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="25dp"
+            android:layout_marginTop="@dimen/_15sdp"
             android:text="Accept"
-            android:layout_width="170dp"
-            android:layout_height="35dp"/>
+            android:layout_width="@dimen/_145sdp"
+            android:layout_height="@dimen/_28sdp"/>
     </LinearLayout>
     </androidx.cardview.widget.CardView>
 
