--- a/app/src/main/res/layout/dialog_home.xml
+++ b/app/src/main/res/layout/dialog_home.xml
@@ -33,13 +33,14 @@
                     android:src="@drawable/remove" />
 
                 <ImageView
+                   android:layout_marginBottom="-2dp"
                     android:layout_marginTop="20dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
                     android:layout_marginEnd="15dp"
                     android:layout_marginRight="15dp"
-                    android:src="@drawable/img_dialog_main" />
+                    android:src="@drawable/img_human_dialog" />
 
                 <TextView
                     android:layout_marginBottom="5dp"
@@ -65,10 +66,24 @@
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 <ImageView
+    android:id="@+id/img_muiten"
     android:layout_marginTop="-10dp"
     android:layout_centerHorizontal="true"
     android:src="@drawable/polygon"
     android:layout_below="@id/card"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"/>
+
+    <RelativeLayout
+        android:layout_below="@id/img_muiten"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/_80sdp">
+        <ImageView
+            android:id="@+id/img_popup"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:src="@drawable/img_hight"
+            android:layout_width="@dimen/_67sdp"
+            android:layout_height="@dimen/_67sdp"/>
+    </RelativeLayout>
 </RelativeLayout>
