--- a/app/src/main/res/layout/dialog_time.xml
+++ b/app/src/main/res/layout/dialog_time.xml
@@ -51,8 +51,8 @@
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="25dp"
             android:text="Accept"
-            android:layout_width="170dp"
-            android:layout_height="35dp"/>
+            android:layout_width="@dimen/_145sdp"
+            android:layout_height="@dimen/_28sdp"/>
     </LinearLayout>
     </androidx.cardview.widget.CardView>
 
