--- a/app/src/main/res/layout/activity_privacy_police.xml
+++ b/app/src/main/res/layout/activity_privacy_police.xml
@@ -21,6 +21,7 @@
             android:src="@drawable/arrowleft" />
 
         <TextView
+            android:id="@+id/tv_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
