--- a/app/src/main/res/layout/fragment_today.xml
+++ b/app/src/main/res/layout/fragment_today.xml
@@ -63,143 +63,154 @@
         android:textColor="#405ED5"
         android:textSize="16sp" />
 
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="140dp">
+<!--    <FrameLayout-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="140dp">-->
 
-        <RelativeLayout
-            android:id="@+id/rl_record"
+<!--        <RelativeLayout-->
+<!--            android:id="@+id/rl_record"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="50dp"-->
+<!--            android:layout_marginHorizontal="15dp"-->
+<!--            android:layout_marginTop="15dp"-->
+<!--            android:background="@drawable/round_bg_blue"-->
+<!--            android:orientation="horizontal">-->
+
+<!--            <TextView-->
+<!--                android:id="@+id/tv_time_records"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_centerVertical="true"-->
+<!--                android:layout_marginStart="@dimen/_15sdp"-->
+<!--                android:layout_marginLeft="@dimen/_15sdp"-->
+<!--                android:layout_marginTop="20dp"-->
+<!--                android:text="09:00"-->
+<!--                android:textColor="#252450"-->
+<!--                android:textSize="16sp" />-->
+
+<!--            <RelativeLayout-->
+<!--                android:id="@+id/rl_record_parent"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="match_parent">-->
+
+<!--                <TextView-->
+<!--                    android:id="@+id/tv_water_record"-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:layout_centerVertical="true"-->
+<!--                    android:layout_marginEnd="10dp"-->
+<!--                    android:layout_marginRight="5dp"-->
+<!--                    android:layout_toStartOf="@id/img_menu"-->
+<!--                    android:layout_toLeftOf="@id/img_menu"-->
+<!--                    android:text="+550ml"-->
+<!--                    android:textColor="#252450"-->
+<!--                    android:textSize="16sp" />-->
+
+<!--                <ImageView-->
+<!--                    android:id="@+id/img_menu"-->
+<!--                    android:layout_width="@dimen/_10sdp"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:layout_alignParentRight="true"-->
+<!--                    android:layout_centerVertical="true"-->
+<!--                    android:layout_marginEnd="@dimen/_10sdp"-->
+<!--                    android:layout_marginRight="@dimen/_10sdp"-->
+<!--                    android:src="@drawable/menu" />-->
+<!--            </RelativeLayout>-->
+<!--        </RelativeLayout>-->
+
+<!--        <RelativeLayout-->
+
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="match_parent">-->
+
+<!--            <androidx.cardview.widget.CardView-->
+<!--                android:id="@+id/ln_popup"-->
+<!--                android:layout_width="150dp"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_alignParentRight="true"-->
+<!--                android:layout_alignParentBottom="true"-->
+<!--                android:layout_marginRight="25dp"-->
+<!--                android:layout_marginBottom="5dp"-->
+<!--                android:visibility="invisible"-->
+<!--                app:cardCornerRadius="15dp">-->
+
+<!--                <LinearLayout-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="match_parent"-->
+<!--                    android:orientation="vertical">-->
+
+<!--                    <RelativeLayout-->
+<!--                        android:id="@+id/rl_edit"-->
+<!--                        android:layout_width="match_parent"-->
+<!--                        android:layout_height="40dp">-->
+
+<!--                        <ImageView-->
+<!--                            android:id="@+id/img_edit"-->
+<!--                            android:layout_width="wrap_content"-->
+<!--                            android:layout_height="wrap_content"-->
+<!--                            android:layout_centerVertical="true"-->
+<!--                            android:layout_marginLeft="10dp"-->
+<!--                            android:src="@drawable/ic_edit" />-->
+
+<!--                        <TextView-->
+<!--                            android:layout_width="wrap_content"-->
+<!--                            android:layout_height="wrap_content"-->
+<!--                            android:layout_centerVertical="true"-->
+<!--                            android:layout_marginStart="@dimen/_15sdp"-->
+<!--                            android:layout_marginLeft="@dimen/_15sdp"-->
+<!--                            android:layout_toEndOf="@+id/img_edit"-->
+<!--                            android:layout_toRightOf="@+id/img_edit"-->
+<!--                            android:text="Edit"-->
+<!--                            android:textColor="#252450"-->
+<!--                            android:textSize="16sp" />-->
+<!--                    </RelativeLayout>-->
+
+<!--                    <View-->
+<!--                        android:layout_width="match_parent"-->
+<!--                        android:layout_height="1dp"-->
+<!--                        android:background="#F6F8FF" />-->
+
+<!--                    <RelativeLayout-->
+<!--                        android:id="@+id/rl_delete"-->
+<!--                        android:layout_width="match_parent"-->
+<!--                        android:layout_height="40dp">-->
+
+<!--                        <ImageView-->
+<!--                            android:id="@+id/img_dele"-->
+<!--                            android:layout_width="wrap_content"-->
+<!--                            android:layout_height="wrap_content"-->
+<!--                            android:layout_centerVertical="true"-->
+<!--                            android:layout_marginLeft="10dp"-->
+<!--                            android:src="@drawable/ic_delete" />-->
+
+<!--                        <TextView-->
+<!--                            android:layout_width="wrap_content"-->
+<!--                            android:layout_height="wrap_content"-->
+<!--                            android:layout_centerVertical="true"-->
+<!--                            android:layout_marginStart="@dimen/_15sdp"-->
+<!--                            android:layout_marginLeft="@dimen/_15sdp"-->
+<!--                            android:layout_toEndOf="@+id/img_dele"-->
+<!--                            android:layout_toRightOf="@+id/img_dele"-->
+<!--                            android:text="Delete"-->
+<!--                            android:textColor="#252450"-->
+<!--                            android:textSize="16sp" />-->
+<!--                    </RelativeLayout>-->
+<!--                </LinearLayout>-->
+
+<!--            </androidx.cardview.widget.CardView>-->
+
+
+<!--        </RelativeLayout>-->
+<!--    </FrameLayout>-->
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="@dimen/_240sdp">
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_history"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_marginHorizontal="15dp"
-            android:layout_marginTop="15dp"
-            android:background="@drawable/round_bg_blue"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/tv_time_records"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_marginStart="@dimen/_15sdp"
-                android:layout_marginLeft="@dimen/_15sdp"
-                android:layout_marginTop="20dp"
-                android:text="09:00"
-                android:textColor="#252450"
-                android:textSize="16sp" />
-
-            <RelativeLayout
-                android:id="@+id/rl_record_parent"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent">
-
-                <TextView
-                    android:id="@+id/tv_water_record"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:layout_marginEnd="10dp"
-                    android:layout_marginRight="5dp"
-                    android:layout_toStartOf="@id/img_menu"
-                    android:layout_toLeftOf="@id/img_menu"
-                    android:text="+550ml"
-                    android:textColor="#252450"
-                    android:textSize="16sp" />
-
-                <ImageView
-                    android:id="@+id/img_menu"
-                    android:layout_width="@dimen/_10sdp"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"
-                    android:layout_centerVertical="true"
-                    android:layout_marginEnd="@dimen/_10sdp"
-                    android:layout_marginRight="@dimen/_10sdp"
-                    android:src="@drawable/menu" />
-            </RelativeLayout>
-        </RelativeLayout>
-
-        <RelativeLayout
-
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <androidx.cardview.widget.CardView
-                android:id="@+id/ln_popup"
-                android:layout_width="150dp"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:layout_alignParentBottom="true"
-                android:layout_marginRight="25dp"
-                android:layout_marginBottom="5dp"
-                android:visibility="invisible"
-                app:cardCornerRadius="15dp">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical">
-
-                    <RelativeLayout
-                        android:id="@+id/rl_edit"
-                        android:layout_width="match_parent"
-                        android:layout_height="40dp">
-
-                        <ImageView
-                            android:id="@+id/img_edit"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_centerVertical="true"
-                            android:layout_marginLeft="10dp"
-                            android:src="@drawable/ic_edit" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_centerVertical="true"
-                            android:layout_marginStart="@dimen/_15sdp"
-                            android:layout_marginLeft="@dimen/_15sdp"
-                            android:layout_toEndOf="@+id/img_edit"
-                            android:layout_toRightOf="@+id/img_edit"
-                            android:text="Edit"
-                            android:textColor="#252450"
-                            android:textSize="16sp" />
-                    </RelativeLayout>
-
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="1dp"
-                        android:background="#F6F8FF" />
-
-                    <RelativeLayout
-                        android:id="@+id/rl_delete"
-                        android:layout_width="match_parent"
-                        android:layout_height="40dp">
-
-                        <ImageView
-                            android:id="@+id/img_dele"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_centerVertical="true"
-                            android:layout_marginLeft="10dp"
-                            android:src="@drawable/ic_delete" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_centerVertical="true"
-                            android:layout_marginStart="@dimen/_15sdp"
-                            android:layout_marginLeft="@dimen/_15sdp"
-                            android:layout_toEndOf="@+id/img_dele"
-                            android:layout_toRightOf="@+id/img_dele"
-                            android:text="Delete"
-                            android:textColor="#252450"
-                            android:textSize="16sp" />
-                    </RelativeLayout>
-                </LinearLayout>
-
-            </androidx.cardview.widget.CardView>
+            android:layout_height="wrap_content"/>
+</LinearLayout>
 
 
-        </RelativeLayout>
-    </FrameLayout>
+
 </LinearLayout>
