--- a/app/src/main/res/layout/fragment_week.xml
+++ b/app/src/main/res/layout/fragment_week.xml
@@ -39,7 +39,7 @@
             <ImageView
                 android:layout_width="@dimen/_53sdp"
                 android:layout_height="@dimen/_53sdp"
-                android:padding="5dp"
+                android:padding="@dimen/_4sdp"
                 android:id="@+id/img1"
                 android:layout_centerVertical="true"
                 android:layout_marginHorizontal="10dp"
@@ -72,7 +72,7 @@
             android:layout_weight="1">
 
             <ImageView
-                android:padding="5dp"
+                android:padding="@dimen/_4sdp"
                 android:id="@+id/img2"
                 android:layout_width="@dimen/_53sdp"
                 android:layout_height="@dimen/_53sdp"
@@ -107,7 +107,7 @@
             android:layout_weight="1">
 
             <ImageView
-                android:padding="5dp"
+                android:padding="@dimen/_4sdp"
                 android:id="@+id/img"
                 android:layout_width="@dimen/_53sdp"
                 android:layout_height="@dimen/_53sdp"
