--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,7 +6,53 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:dropDownListViewStyle">@style/PopupMenuListView</item>
+
     </style>
 
+    <style name="CustomPopupTheme" parent="Theme.AppCompat.Light.NoActionBar">
+
+        <item name="android:textColor">#252450</item>
+        <item name="android:popupMenuStyle">@style/PopupMenu</item>
+        <item name="popupMenuStyle">@style/PopupMenu</item>
+        <item name="android:dropDownListViewStyle">@style/PopupMenuListView</item>
+    </style>
+
+    <style name="PopupMenu" parent="ThemeOverlay.AppCompat.Dark">
+        <item name="android:itemPadding">25dp</item>
+        <item name="android:listPreferredItemHeightSmall">70dp</item>
+        <item name="android:dropDownVerticalOffset">-4dp</item>
+        <item name="android:popupBackground">@drawable/backgroup_popup</item>
+    </style>
+
+<!--    <style name="popupMenuStyle" parent="@android:style/Widget.PopupMenu">-->
+<!--        <item name="android:itemPadding">25dp</item>-->
+<!--        <item name="android:listPreferredItemHeightSmall">70dp</item>-->
+
+
+<!--    </style>-->
+
+
+    <style name="PopupMenuListView" parent="@style/Widget.AppCompat.ListView.DropDown">
+        <item name="android:divider">#F6F8FF</item>
+        <item name="android:dividerHeight">1dp</item>
+
+    </style>
+    <style name="CalenderViewCustom" parent="Theme.AppCompat">
+        <item name="colorAccent">#FF5668</item>
+
+    </style>
+
+    <style name="CalenderViewDateCustomText" parent="android:TextAppearance.DeviceDefault.Small">
+        <item name="android:textColor">#FFF</item>
+
+    </style>
+
+    <style name="CalenderViewWeekCustomText" parent="android:TextAppearance.DeviceDefault.Small">
+        <item name="android:textColor">#FFF</item>
+    </style>
+
+<!--    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar"/>-->
+<!--    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light"/>-->
 
 </resources>
